# samiralavi.github.io

./: 404.html  CNAME  README.md  astro.config.mjs  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  opencode.json  package-lock.json  package.json  pyproject.toml  rss.xml  sitemap-0.xml  sitemap-index.xml  sitemap.xml
.github/workflows/: ci.yml
_astro/: _slug_.FOaW6w7N.css  index.Br3k7Bbt.css
activities/: index.html
archives/: index.html
archives/2019/: index.html
blog/: index.html
blog/active_objects/: index.html
blog/arduino_cheat_sheet_coaster/: index.html
blog/blog/: index.html
blog/buck_coverter/: index.html
blog/c4_embedded/: index.html
blog/firmware-co-design/: index.html
blog/iot_communication_patterns/: index.html
blog/share_usb_device_wsl_docker/: index.html
contact/: index.html
container/: Dockerfile
cv/: index.html
docs/: .pages  activities.md  contact.md  cv.md  index.md  interests.md  privacy-policy.md  publications.md  teaching.md
docs/blog/: .pages  c4_embedded.md
interests/: index.html
overrides/: main.html
overrides/partials/: comments.html
privacy-policy/: index.html
public/: ads.txt  robots.txt
publications/: index.html
search/: search_index.json
src/: consts.ts  content.config.ts
src/components/: BaseHead.astro  Comments.astro  Footer.astro  FormattedDate.astro  Header.astro  SocialIcon.astro  ThemeToggle.astro
src/layouts/: BaseLayout.astro  BlogPostLayout.astro
src/pages/: 404.astro  activities.astro  (+7 more)
teaching/: index.html
(+44 files in other folders)
